Fixed interaction checker bug when there is no interaction & improved contrast on links. Small edits to details page appearance

--- a/site-capstone/Frontend/src/Components/MedicationDetails/MedicationDetails.css
+++ b/site-capstone/Frontend/src/Components/MedicationDetails/MedicationDetails.css
@@ -302,3 +302,7 @@ a{
     padding: 0px;
   }
 }
+
+.details-link{
+  color: #0053a0;
+}
